--- a/src/main/java/com/ufc/poo/sorveteria/views/ClienteView.form
+++ b/src/main/java/com/ufc/poo/sorveteria/views/ClienteView.form
@@ -227,6 +227,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="LIMPAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnLimparFiltroActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jBtnFiltrarCliente">
           <Properties>
@@ -293,8 +296,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="80" max="-2" attributes="0"/>
-                  <EmptySpace pref="99" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="173" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jBtnApagarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jBtnEditarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
